slightly fix characters overflow

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     margin-bottom: 20px;
     color: #d4d4d2;
     font-size: 70px;
-    border: thin solid white;
+    max-width: 9ch;
 }
 
 button {
